<resources>
    <string name="app_name">Con Cưng</string>
    <string name="login">Login</string>
    <string name="facebook_app_id">572911346989145</string> <string name="fb_login_protocol_scheme">fb572911346989145</string>

    <string name="logout">Log Out</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="search">Bố mẹ tìm gì cho con hôm nay?</string>

    <string name="account">Tài khoản</string>
    <string name="vip">Thẻ VIP</string>
    <string name="home">Trang chủ</string>
    <string name="location">Tìm siêu thị</string>
    <string name="notifi">Thông báo</string>
    <string name="txt_login">Đăng nhập</string>
    <string name="txt_logout">Đăng xuất</string>
    <string name="txt_register">Chưa có tài khoản</string>
    <string name="txt_register2">Đăng ký</string>
    <string name="txt_phone">Số điện thoại</string>
    <string name="txt_phone2">Điện thoại: </string>
    <string name="txt_code">Mã đơn hàng: </string>
    <string name="txt_time">Thời gian đặt hàng: </string>
    <string name="txt_number_product">Số sản phẩm: </string>
    <string name="txt_type_buy">Thanh toán: </string>
    <string name="txt_total">Tổng tiền: </string>
    <string name="txt_pass">Mật khẩu</string>
    <string name="txt_pass_miss">Quên mật khẩu</string>
    <string name="txt_or_login">Hoặc đăng nhập bằng</string>
    <string name="txt_or_promotion">Khuyến mãi</string>
    <string name="txt_infomation">Thông tin sản phẩm</string>
    <string name="txt_infomation_order">Thông tin đơn hàng</string>
    <string name="txt_des">Miêu tả</string>
    <string name="txt_show">Xem chi tiết</string>
    <string name="txt_hide">Rút gọn</string>
    <string name="txt_sen">Gửi bình luận</string>
    <string name="txt_view_cart">Xem giỏ hàng &amp; hàng tất</string>
    <string name="txt_reply">Trả lời</string>
    <string name="txt_cancel">Bỏ qua</string>
    <string name="txt_choose_more">Chọn thêm sản phẩm khác</string>
    <string name="txt_comment">Đánh giá và bình luận</string>
    <string name="fcm_message">Thông báo</string>
    <string name="txt_product">Sản phẩm</string>
    <string name="txt_continue">Tiếp tục</string>
    <string name="txt_order">Đặt hàng</string>
    <string name="txt_order_ok">Đã đặt hàng</string>
    <string name="txt_order_finished">Đã giao hàng</string>
    <string name="txt_order_cancel">Hủy đặt hàng</string>
    <string name="txt_order_canceled">Đã hủy</string>
    <string name="txt_all">Tất cả</string>
    <string name="txt_cart">Giỏ hàng</string>
    <string name="txt_cart_2">Không có sản phẩm nào trong giỏ hàng của bạn</string>
    <string name="txt_delete">Xóa</string>
    <string name="txt_value">đ</string>
    <string name="txt_manager">Quản lý tài khoản</string>
    <string name="txt_category">Danh mục sản phẩm</string>
    <string name="txt_confirm">Xác nhận</string>
    <string name="txt_insert">Thêm mới</string>
    <string name="txt_update">Sửa thông tin địa chỉ </string>
    <string name="txt_title">Địa chỉ nhận hàng </string>
    <string name="txt_manager_order">Quản lý đơn hàng</string>
    <string name="txt_news">Tin tức</string>
    <string name="txt_phone_1">1800 6609</string>
    <string name="txt_phone_2">1800 6703</string>
    <string name="txt_notification">Thông báo của tôi</string>
    <string name="txt_information_user">Thông tin tài khoản</string>
    <string name="txt_product_love">Sản phẩm yêu thích</string>
    <string name="txt_address">Địa chỉ giao hàng</string>
    <string name="txt_address2">Địa chỉ: </string>
    <string name="txt_product_view">Sản phẩm đã xem</string>
    <string name="txt_comments">Nhân xét của tôi</string>
    <string name="txt_address_default">Địa chỉ mặt định</string>
    <string name="txt_name">Nhập họ &amp; tên người nhận</string>
    <string name="txt_phone3">Nhập số điện thoại nhận hàng</string>
    <string name="txt_address3">Nhập địa chỉ nhận hàng</string>
    <string name="txt_address4">Địa chỉ mặt định</string>
    <string name="txt_address5">Địa chỉ công ty</string>
    <string name="txt_address6">Danh sách địa chỉ</string>
    <string name="txt_buy">Đặt hàng &amp; thanh toán</string>
    <string name="txt_detail_order">Chi tiết đơn hàng online</string>
    <string name="txt_create_comment">Vui lòng viết bình luận của bạn!</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
