<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/txt_update"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/imCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/size"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/ic_cancel_24"/>
    </RelativeLayout>


    <LinearLayout
        android:paddingLeft="@dimen/size"
        android:paddingRight="@dimen/size"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size"
            android:text="Nhập địa chỉ nhận hàng"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size"
            android:text="Tên người nhận"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size"
            android:text="Số điện thoại"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/tvPhone"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_phone3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size"
            android:text="Địa chỉ nhận hàng"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_address3" />

        <RadioGroup
            android:id="@+id/rgAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbAddress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_address4" />

            <RadioButton
                android:id="@+id/rbAddress2"
                android:checked="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_address5" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvConfirm"
            android:layout_marginTop="@dimen/size"
            android:layout_marginBottom="@dimen/size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAccent"
            android:text="@string/txt_confirm"/>
    </LinearLayout>
</LinearLayout>
