<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imCancel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:src="@drawable/ic_cancel" />

        <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:textSize="20sp"
               android:textStyle="bold"
               android:textColor="@color/colorBlack"
               android:text="@string/txt_login"/>
            <EditText
                android:layout_marginTop="@dimen/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="number"
                android:singleLine="true"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/border_login"
                android:hint="@string/txt_phone"/>
            <EditText
                android:layout_marginTop="@dimen/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:inputType="textPassword"
                android:background="@drawable/border_login"
                android:drawableRight="@drawable/ic_hide_pass"
                android:hint="@string/txt_pass"/>

            <TextView
                android:layout_marginTop="@dimen/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/border_login_btn"
                android:text="@string/txt_login"/>

            <TextView
                android:layout_marginTop="@dimen/size2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:text="@string/txt_pass_miss"/>
            <TextView
                android:layout_marginTop="@dimen/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorBlue"
                android:text="@string/txt_or_login"/>
            <LinearLayout
                android:layout_marginTop="@dimen/size"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal" />
                <ImageView
                    android:id="@+id/imUser"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvUserId"
                android:layout_marginTop="@dimen/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_register"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/border_register_btn"
                android:text="@string/txt_register2"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
