<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/size"
    android:orientation="horizontal">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlue"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="@string/txt_code"/>

        <TextView
            android:id="@+id/tvCode2"
            android:layout_toRightOf="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlue"
            android:textStyle="bold"
            android:textSize="17sp"
            android:text="123456"/>


        <TextView
            android:id="@+id/tvDateTime"
            android:layout_below="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/txt_time"/>
        <TextView
            android:id="@+id/tvDateTime2"
            android:layout_below="@+id/tvCode"
            android:layout_marginLeft="@dimen/size_5"
            android:layout_toRightOf="@+id/tvDateTime"
            android:layout_toLeftOf="@+id/imEdit"
            android:textColor="@color/colorBlack"
            android:layout_marginRight="@dimen/size_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11:35 22/06/2020"/>
        <TextView
            android:id="@+id/tvNumber"
            android:layout_below="@+id/tvDateTime2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/txt_number_product"/>
        <TextView
            android:id="@+id/tvNumber2"
            android:layout_below="@+id/tvDateTime2"
            android:layout_marginLeft="@dimen/size_5"
            android:layout_toRightOf="@+id/tvNumber"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"/>

        <TextView
            android:id="@+id/tvBuy"
            android:layout_below="@+id/tvNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/txt_type_buy"/>
        <TextView
            android:id="@+id/tvBuy2"
            android:layout_below="@+id/tvNumber2"
            android:layout_marginLeft="@dimen/size_5"
            android:layout_toRightOf="@+id/tvBuy"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thanh toán khi nhận hàng"/>

        <TextView
            android:id="@+id/tvTotal1"
            android:layout_below="@+id/tvBuy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/txt_total"/>
        <TextView
            android:id="@+id/tvTotal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBuy2"
            android:layout_marginLeft="@dimen/size_5"
            android:layout_toRightOf="@+id/tvTotal1"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:text="2,000,000đ"/>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_below="@+id/tvTotal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Đã hủy"/>

        <TextView
            android:id="@+id/tvView"
            android:layout_below="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/size_5"
            android:textStyle="bold"
            android:textColor="@color/colorBlue"
            android:text="@string/txt_show"/>

        <View
            android:layout_below="@+id/tvView"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/size_5"
            android:background="@color/colorBlack4"/>

    </RelativeLayout>
</LinearLayout>

