<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/rlLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fgLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom" />

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:isScrollContainer="false"
            android:layout_alignParentBottom="true"
            android:fitsSystemWindows="true"
            android:weightSum="5">

            <LinearLayout
                android:id="@+id/btnHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_home" />

                <TextView
                    android:id="@+id/tvHome"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/home" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnAccount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_account" />

                <TextView
                    android:id="@+id/tvAccount"
                    android:textColor="@color/colorBlack3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/account" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_vip" />

                <TextView
                    android:id="@+id/tvVip"
                    android:gravity="center"
                    android:textColor="@color/colorBlack3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/vip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_notification" />

                <TextView
                    android:id="@+id/tvNotifi"
                    android:gravity="center"
                    android:textColor="@color/colorBlack3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/notifi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/tvSearch"
                    android:gravity="center"
                    android:textColor="@color/colorBlack3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/location" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_gravity="start"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlack"></LinearLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>