<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llCenter"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlUser"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorAccent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imUser"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/size"
                android:src="@drawable/ic_user"
                app:civ_border_color="#000"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/size_5"
                android:layout_toRightOf="@+id/imUser"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/size"
                android:src="@drawable/ic_right" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size"
            android:layout_marginTop="@dimen/size"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size"
                android:gravity="center_vertical"
                android:text="@string/txt_manager_order"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size"
            android:layout_marginTop="@dimen/size"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size"
                android:gravity="center_vertical"
                android:text="@string/txt_notification"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="@dimen/size"
            android:layout_marginBottom="@dimen/size"
            android:background="@color/colorBlack4" />

        <LinearLayout
            android:id="@+id/llProductLove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size"
                android:gravity="center_vertical"
                android:text="@string/txt_product_love"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size"
            android:layout_marginTop="@dimen/size"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size"
                android:gravity="center_vertical"
                android:text="@string/txt_information_user"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="@dimen/size"
            android:layout_marginBottom="@dimen/size"
            android:background="@color/colorBlack4" />

        <LinearLayout
            android:id="@+id/llAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size"
                android:gravity="center_vertical"
                android:text="@string/txt_address"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llProductWatched"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size"
            android:layout_marginTop="@dimen/size"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size"
                android:gravity="center_vertical"
                android:text="@string/txt_product_view"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="@dimen/size"
            android:layout_marginBottom="@dimen/size"
            android:background="@color/colorBlack4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_logout"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size"
                android:gravity="center_vertical"
                android:text="@string/txt_comments"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size"
            android:layout_marginLeft="@dimen/size"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size"
                android:gravity="center_vertical"
                android:text="@string/txt_logout"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>


